# chatgpt-clone

./: .gitignore  req.txt
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/workflows/: azure-static-web-apps-ashy-smoke-064d11500.yml  azure-static-web-apps-proud-desert-06ffc4c00.yml  azure-static-web-apps-witty-ocean-052b8ed00.yml  backend.yml  frontend.yml  template.txt
ai-service/: Dockerfile
ai-service/app/: main.py
ai-service/app/api/v1/: chat.py
chat-service/: Dockerfile  pyproject.toml
chat-service/app/: settings.py
frontend/: package-lock.json  package.json
gateway/: Dockerfile  pyproject.toml
gateway/app/: settings.py
gateway/app/api/: router.py
gateway/app/api/v1/: chat.py
